--- a/css/index.css
+++ b/css/index.css
@@ -5,11 +5,12 @@ html, body{
 .wrap{
     min-height: 100%;
     height: 100%;
-    background: #ffffff url("../img/0405.jpg") repeat;
+    background: #ffffff;
 }
 .footer{
-    background-color: #6b2973;
+    margin: 0;
     padding: 15px;
+    background-color: #003845;
     color: #eeeeee;
 }
 /*end of structure*/
@@ -17,28 +18,19 @@ html, body{
 /*left-side navigation*/
 .top-area{
     padding-bottom: 30px;
-    box-sizing: border-box;
     background-color: #6b2973;
 }
-.left-nav{
-    margin-top: 30px;
-    box-sizing: border-box;
-}
 .nav-bar{
+    max-width: 250px;
     height: 780px;
     padding: 0;
-    background-color: #eeeeee;
-}
-.nav-stacked li{
-    font-weight: 800;
-    font-size: 16px;
+    background-color: #6b2973;
 }
 
 .nav-stacked dl{
     list-style-type: none;
-    display: none;
     text-align: left;
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 300;
 }
 .nav-stacked dd{
@@ -48,6 +40,7 @@ html, body{
     display: block;
     color: #337ab7;
 }
+
 .nav-stacked dl a:link{
     color: #337ab7;
     text-decoration: none;
@@ -63,36 +56,47 @@ html, body{
     color: #ffffff;
     text-decoration: none;
 }
-.nav-stacked li:hover dl{
-    display: block;
-}
-/* EOF left-side navigation*/
-.carousel{
 
-    margin: 30px 0 30px 15px;
+/* EOF left-side navigation*/
+
+.carousel{
+    margin-bottom: 30px;
 }
-/*.jumbotron{*/
-    /*margin-left: 15px;*/
-    /*background-color:#ffffff; !* IE6,IE7 *!*/
-    /*background-color: rgba(255,255,255,0.6)*/
-/*}*/
-.start-box{
-    margin-left: 12.5%;
-    padding-top: 40px;
-    width: 75%;
+.panel-primary{
+    margin-left: 20%;
+    margin-right: 20%;
+    padding: 40px;
     height: 400px;
     background-color:#ffffff; /* IE6,IE7 */
-    background-color: rgba(255,255,255,0.8)
-}
-.start-box h1{
+    background-color: rgba(255,255,255,0.8);
     text-align: center;
-    color: #337ab7;;
+    text-align: -webkit-center;
+    color: #6b2973;
+    overflow: hidden;
 }
-.panel-body{
-    padding-left: 15%;
+.form-group input{
+    width: 75%;
 }
-.panel-body input{
-    width: 600px;
-    display: inline-block;
-    vertical-align: bottom;
+.email-dropdown{
+    box-sizing: border-box;
+    height: 120px;
+    overflow: auto;
+}
+ul.list{
+    list-style:none;
+    padding:0;
+    margin:0;
+    overflow:hidden;
+}
+ul.list li{
+    border:1px solid #ffffff;
+    width:75%;
+    padding:5px 10px;
+    margin:0;
+    text-overflow:ellipsis;
+    overflow:hidden;
+}
+/*when highlighting the selected li*/
+.lilight{
+    background-color:#fafafa;
 }
