--- a/css/index.css
+++ b/css/index.css
@@ -26,7 +26,9 @@ html, body{
     padding: 0;
     background-color: #6b2973;
 }
-
+.ui-accordion .ui-accordion-header{
+    font-size: 20px;
+}
 .nav-stacked dl{
     list-style-type: none;
     text-align: left;
@@ -73,6 +75,9 @@ html, body{
     text-align: -webkit-center;
     color: #6b2973;
     overflow: hidden;
+}
+.panel-primary h1{
+    font-weight: 600;
 }
 .form-group input{
     width: 75%;
