--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,11 @@
 /*start of structure*/
 html, body{
     height: 100%;
+    font-family: "Microsoft YaHei","Segoe UI", "Lucida Grande", Helvetica, Arial,sans-serif;
 }
 .wrap{
     min-height: 100%;
     height: 100%;
-    background:#ffffff url('../img/image4.gif') no-repeat;
-    background-position: 90% 60%;
 }
 .footer{
     margin: 0;
@@ -79,15 +78,16 @@ html, body{
     color: #ffffff;
 }
 /*carousal button*/
-.btn{
+.btn-carousel{
     margin-top: 1px;
-    background-color:#6b2973;
+    background:#6b2973;
     color: #ffffff;
 }
-.btn:hover{
+.btn-carousel:hover{
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
-.btn:hover,.btn:focus,.btn-visited{
+.btn-carousel:hover,.btn-carousel:focus,.btn-carousel:visited{
+    background:#6b2973;
     color: #ffffff;
 }
 /*carousal button*/
@@ -131,8 +131,7 @@ ul.list li{
 .lilight{
     background-color:#fafafa;
 }
-.btn-lg{
-    margin-left: 48%;
+.center-block span{
     color: #6b2973;
 }
 /*EOF right-side content*/
