--- a/css/q3.css
+++ b/css/q3.css
@@ -17,7 +17,13 @@
     padding-left: 20px;
     float: left;
 }
-.col-md-12 textarea{
-    width: 25%;
+.col-md-3 textarea
+{
     height: 80px;
+}
+.col-md-12 textarea
+{
+    width: 25%;
+	height: 80px;
+
 }
